# build-aapt2-16KB

./: CMakeLists.txt  README.md  main.yml
.github/workflows/: main.yml
cmake/: aapt2.cmake
src/binder/: Parcel.h
src/cutils/: ashmem.h  atomic.h  trace.h
src/fake_headers/: lodepng_util.h
src/libziparchive/: zip_archive.cc
src/zopfli/: CMakeLists.txt
